# Automate_Test

./: README.md  pyproject.toml
libs/: common.robot
pylibs/: CustomLibrary.py
test/: tc_add_user_and_validate.robot  tc_delete_user_and_validate.robot
